# api/src/main/resources/api.yaml
@@ -77,6 +77,26 @@ paths:
               schema:
                 $ref: '#/components/schemas/AdRegisterResponseDto'
 
+  /api/v1/ad/search:
+    get:
+      tags:
+        - caradvertiser
+      operationId: search
+      description: Returns every Advertisement that matches the requested Filter
+      requestBody:
+        required: true
+        content:
+          application/json;charset=UTF-8:
+            schema:
+              $ref: '#/components/schemas/FilterDto'
+      responses:
+        200:
+          description: AdvertisementDtos
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FilterResultDto'
+
 # ==============================================================================
 # Authentication
 # ==============================================================================
@@ -206,5 +226,39 @@ components:
           type: string
         refreshToken:
           type: string
+
+    FilterDto:
+      properties:
+        page:
+          type: integer
+          format: int32
+        brand:
+          type: string
+          maxLength: 20
+          minLength: 2
+        type:
+          type: string
+          maxLength: 20
+          minLength: 2
+        price:
+          type: integer
+          format: int64
+          maximum: 9999999999
+
+    FilterResultDto:
+      properties:
+        page:
+          type: integer
+          format: int32
+        pageSize:
+          type: integer
+          format: int32
+        ads:
+          type: array
+          items:
+            $ref: '#/components/schemas/AdvertisementDto'
+        totalElements:
+          type: integer
+          format: int64
 
 
