# server/src/main/java/hu/personal/caradvertiser/service/AdvertisementService.java
@@ -4,6 +4,8 @@ import hu.personal.caradvertiser.entity.Advertisement;
 import hu.personal.caradvertiser.mapper.AdvertisementMapper;
 import hu.personal.caradvertiser.model.AdRegisterResponseDto;
 import hu.personal.caradvertiser.model.AdvertisementDto;
+import hu.personal.caradvertiser.model.FilterDto;
+import hu.personal.caradvertiser.model.FilterResultDto;
 import hu.personal.caradvertiser.repository.AdvertisementRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -16,6 +18,8 @@ public class AdvertisementService {
     private final AdvertisementRepository advertisementRepository;
 
     private final AdvertisementMapper advertisementMapper;
+
+    private final AdvertisementSearchService advertisementSearchService;
 
     public AdvertisementDto getAd(Long id) {
         return advertisementMapper.toDto(advertisementRepository.findById(id)
@@ -32,6 +36,10 @@ public class AdvertisementService {
         Advertisement advertisement = advertisementRepository.findById(id).orElseThrow(EntityNotFoundException::new);
         advertisementRepository.delete(advertisement);
         return advertisementMapper.toDto(advertisement);
+    }
+
+    public FilterResultDto search(FilterDto filterDto) {
+        return advertisementSearchService.search(filterDto);
     }
 }
 
